recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:3: error: ';' expected but '=' found.
return rep:List[Int] = l(0)::l(l.length-2)
                     ^