recursion.cons.lessons.recursion.cons.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {

return rep:List[Int] = l(0)::l(l.length-2)

	
	
}
